@@ -1,3 +1,8 @@
+2002-09-18  Daniel Jacobowitz  <drow@mvista.com>
+
+	Fix PR gdb/709
+	* values.c (value_static_field): Call read_var_value.
+
 2002-09-18  Theodore A. Roth  <troth@verinet.com>
 
         * gdb/avr-tdep.c(avr_scan_prologue): Fix bad call to 
